[tool.poetry]
name = "datura-ai-fastapi-task"
version = "0.1.0"
description = ""
authors = ["glory03023 <glorykakas03023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = "^0.34.0"
fastapi = ">=0.110.1,<0.111.0"
async-substrate-interface = "^1.0.8"
bittensor = "^9.1.0"
redis = "^5.2.1"
dotenv = "^0.9.9"
passlib = "^1.7.4"
jose = "^1.0.0"
pycryptodome = "3.18.0"
python-jose = "^3.4.0"
motor = "^3.7.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
datura-py = "^0.0.14"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
